gitops/expensy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: expensy
  labels:
    istio-injection: enabled
